# pyo3-seaquery-pg-axum-framework

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  docker-compose.yml  pyproject.toml  readme.md  sweep-commit-template.md
.cargo/: config.toml
pyo3_seaquery_pg_axum_framework/: __init__.py  pyo3_seaquery_pg_axum_framework.pyi
python/: call_py_from_rust.py  call_rust_from_py.py  main.py
src/: lib.rs  main.rs
src/database/: auth_user.rs  auth_user_py.rs  mod.rs  utils.rs  utils_py.rs
src/endpoints/: database.rs  health.rs  mod.rs  py_example.rs
src/server/: mod.rs
