[package]
name = "pyo3-seaquery-pg-axum-framework"
version = "0.1.0"
edition = "2024"
authors = ["Guangyu He <me@heguangyu.net>"]
description = "An Axum framework with PostgreSQL using SeaQuery and SQLx, exposed and connected to Python via PyO3."
documentation = "readme.md"
exclude = ["tests/*", "examples/*"]
categories = ["web-programming", "database", "python-extensions"]

[lib]
name = "pyo3_seaquery_pg_axum_framework"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyo3-seaquery-pg-axum-framework"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize", "chrono"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"] }
serde-pyobject = "0.8.0"
sea-query = { version = "1.0.0-rc.29", features = ["with-chrono"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono"
] }
sea-query-sqlx = { version = "0.8.0-rc.14", features = ["sqlx-postgres", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
anyhow = "1.0"

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py313", "pyo3/generate-import-lib"]