[project]
name = "pyo3-seaquery-pg-axum-framework"
dynamic = ["version"]
description = "GoldenTech Rust Python PostgreSQL Axum Framework"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Guangyu He", email = "me@heguangyu.net" }
]
dependencies = [
    "pydantic",
]

[tool.uv]
extra-index-url = ["https://pypi.golden-tech.de"]

[dependency-groups]
dev = [
    "maturin",
    "ruff",
    "ty",
    "pytest",
    "python-dotenv",
    "coverage"
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py313", "pyo3/generate-import-lib"]